--- a/sample.ipynb
+++ b/sample.ipynb
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cc9c37a58>"
+       "<matplotlib.image.AxesImage at 0x7f9de4c76b00>"
       ]
      },
      "execution_count": 14,
@@ -277,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cc99d2a20>"
+       "<matplotlib.image.AxesImage at 0x7f9de4a0db00>"
       ]
      },
      "execution_count": 15,
@@ -309,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6cc9bb0e80>"
+       "<matplotlib.image.AxesImage at 0x7f9de4bedbe0>"
       ]
      },
      "execution_count": 16,
