Modified image making for game of life

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w, h = 512, 512\n",
+    "data = np.zeros((h, w, 3), dtype=np.uint8)\n",
+    "for i in range(100):\n",
+    "    print(\"Saving image\")\n",
+    "    img = Image.fromarray(data, 'RGB')\n",
+    "    img.save(str(str(i)+'image.png'))\n",
+    "    data += 1\n",
+    "    sys.stdout.flush()"
+   ]
   },
   {
    "cell_type": "code",
